syntax = "proto3";

package ai.metathings.service.camerad;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "camera.proto";

message CreateRequest {
	google.protobuf.StringValue name = 1;
	OpCore core = 2;
	OpEntity entity = 3;
	OpConfig config = 4;
}

message CreateResponse {
	Camera camera = 1;
}
